auth & author - frontend

--- a/templates/src/author/posts/create_post.html
+++ b/templates/src/author/posts/create_post.html
@@ -15,7 +15,7 @@
         <div class="w-64 bg-indigo-800 text-white p-6 h-screen">
             <h2 class="text-sm font-semibold mb-8">User Dashboard | Fleekspace</h2>
             <ul class="space-y-4">
-                <li><a href="dashboard.html" class="block px-4 py-2 hover:bg-indigo-700 rounded-md">Dashboard</a></li>
+                <li><a href="../dashboard.html" class="block px-4 py-2 hover:bg-indigo-700 rounded-md">Dashboard</a></li>
                 <li><a href="posts.html" class="block px-4 py-2 hover:bg-indigo-700 rounded-md">Posts</a></li>
             </ul>
         </div>
