--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -46,6 +46,7 @@
     <footer class="bg-gray-900 text-white text-center py-6 sticky-[100vh]">
         <p class="text-lg">Thanks for being part of us, bro!</p>
         <p class="text-sm mt-2">© 2024 Fleekspace. All rights reserved.</p>
+        <p><a href="./auth/login.html">Login</a></p>
     </footer>
 
     <script>
